H3CIPMSJAVA-20180830/src/objects/PhoneMapping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-合肥</fullName>
                </value>
                <value>
                    <fullName>海南-海口</fullName>
                </value>
                <value>
                    <fullName>浙江-金华</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>辽宁-盘锦</fullName>
                </value>
                <value>
                    <fullName>吉林-通化</fullName>
                </value>
                <value>
                    <fullName>四川-绵阳</fullName>
                </value>
                <value>
                    <fullName>四川-泸州</fullName>
                </value>
                <value>
                    <fullName>云南-玉溪</fullName>
                </value>
                <value>
                    <fullName>云南-红河</fullName>
                </value>
                <value>
                    <fullName>河北-石家庄</fullName>
                </value>
                <value>
                    <fullName>贵州-遵义</fullName>
                </value>
                <value>
                    <fullName>湖北-黄石</fullName>
                </value>
                <value>
                    <fullName>湖北-十堰</fullName>
                </value>
                <value>
                    <fullName>湖南-株洲</fullName>
                </value>
                <value>
                    <fullName>湖南-衡阳</fullName>
                </value>
                <value>
                    <fullName>湖北-荆州</fullName>
                </value>
                <value>
                    <fullName>湖南-常德</fullName>
                </value>
                <value>
                    <fullName>湖南-邵阳</fullName>
                </value>
                <value>
                    <fullName>四川-攀枝花</fullName>
                </value>
                <value>
                    <fullName>山东-威海</fullName>
                </value>
                <value>
                    <fullName>黑龙江-哈尔滨</fullName>
                </value>
                <value>
                    <fullName>广东-佛山</fullName>
                </value>
                <value>
                    <fullName>陕西-延安</fullName>
                </value>
                <value>
                    <fullName>湖南-岳阳</fullName>
                </value>
                <value>
                    <fullName>江苏-镇江</fullName>
                </value>
                <value>
                    <fullName>山西-临汾</fullName>
                </value>
                <value>
                    <fullName>河南-洛阳</fullName>
                </value>
                <value>
                    <fullName>河南-新乡</fullName>
                </value>
                <value>
                    <fullName>河南-驻马店</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Codes__c</fullName>
        <label>Phone Codes</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PhoneMapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Phone_Codes__c</columns>
        <columns>Province__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>PhoneMappingId</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>